--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -8,6 +8,8 @@
     <meta name="description" content="Código desenvolvido para o desafio 2023/01 da Sharenergy"/>
     <meta name="author" content="Felipe Holanda"/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet"> 
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Sharetest</title>
   </head>
